k8s-manifests/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: default
spec:
  selector:
    app: worker
  ports:
    - port: 80
      targetPort: 80
